# rv32-simulator

./: .clang-tidy  .codacy.yml  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codacy-analysis.yml
src/: MainCPU.cpp  Simulator.cpp  Simulator.h
